[package]
name = "cufft_rs"
version = "0.1.0"
authors = ["John Stanford <johnwstanford@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
colored = "1.8.0"
libc = "0.2.0"
more-asserts = "0.2.1"
rustfft = "3.0.0"

[dev-dependencies]
ieee754 = "0.2.6"
float-cmp = "0.8.0"
rand = "0.7.3"
